# rov-master-v2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  config.json  develop-to-do-list.md  logger.conf  rov-master.xmind
Drivers/: CMakeLists.txt  jy901.c  jy901.cpp  jy901.h  ms5837.cpp  ms5837.h  ms5837_iic.c  ms5837_iic.h  ms5837_uart.c  ms5837_uart.h  pca9685.c  pca9685.cpp  pca9685.h  sf0050.c  sf0050.cpp  sf0050.h
Libs/: CMakeLists.txt
Libs/WiringNP/wiringPi/: wiringSerial.c  wiringSerial.h
Libs/easylogger/plugins/file/: elog_file_cfg.h
Test/: CMakeLists.txt  test_config.cpp  test_event.cpp  test_json.cpp  test_jy901.cpp  test_ms5837.cpp  test_pca9685.cpp  test_rpc.cpp
User/: concept.h  config.cpp  config.h  control.cpp  control.h  init.cpp  init.h  log.cpp  log.h  macro.h  main.cpp  maindata.h  sensor.h  sysInfo.h  sys_Info.h  utils.cpp  utils.h
User/Connection/: jsonrpcpp.hpp  method_catcher.cpp  method_catcher.h  method_depth.cpp  method_depth.h  method_get_feedbacks.cpp  method_get_feedbacks.h  method_get_info.cpp  method_get_info.h  method_move.cpp  method_move.h  method_set_depth_locked.h  method_set_direction_locked.cpp  method_set_direction_locked.h  rpcApp.cpp  rpcApp.h  rpcServer.cpp  rpcServer.h  rpc_server.cpp  rpc_server.h
User/Connection/protocol/: jsonrpc.cpp  jsonrpc.h
User/Connections/: cjson.c  cjson.h  cjson_anal.c  cjson_anal.cpp  cjson_anal.h  crpcfunc.c  crpcfunc.cpp  crpcfunc.h  jsonrpc.c  jsonrpc.h  rpcdata.h
User/Control/: PID.h  control.cpp  control.h  control_propeller.cpp  control_propeller.h  pwm_devices.cpp  pwm_devices.h
User/Event/: control_pca9685.cpp  control_pca9685.h  event.cpp  event.h  event_manager.cpp  event_manager.h  sensor_jy901.cpp  sensor_jy901.h  sensor_ms5837.cpp  sensor_ms5837.h  sensor_pca9685.cpp  sensor_pca9685.h
User/Threads/: control_thread.cpp  control_thread.h
